src/main/SmoolaParser.java
// Generated from /home/felagund/Desktop/Fall97/PLC/smoola/Smoola.g4 by ANTLR 4.7

    import ast.node.declaration.*;
    import ast.node.expression.*;
    import ast.node.statement.*;
    import ast.Type.ArrayType.*;
    import ast.Type.PrimitiveType.*;
    import ast.Type.UserDefinedType.*;
    import ast.Type.*;
    import ast.VisitorImpl;
    import ast.node.expression.Value.*;
    import ast.node.Program;
    import symbolTable.SymbolTable;
    import ast.node.PhaseNum;
    import ast.node.expression.BinaryOperator.OperatorTypes;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SmoolaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, CONST_NUM=42, CONST_STR=43, NL=44, ID=45, 
		COMMENT=46, WS=47;
	public static final int
		RULE_program = 0, RULE_mainClass = 1, RULE_classDeclaration = 2, RULE_varDeclaration = 3, 
		RULE_methodDeclaration = 4, RULE_mainStatements = 5, RULE_mainStatement = 6, 
		RULE_mainStatementAssignment = 7, RULE_methodCall = 8, RULE_statements = 9, 
		RULE_statement = 10, RULE_statementBlock = 11, RULE_statementCondition = 12, 
		RULE_statementLoop = 13, RULE_statementWrite = 14, RULE_statementAssignment = 15, 
		RULE_expression = 16, RULE_expressionAssignment = 17, RULE_expressionOr = 18, 
		RULE_expressionOrTemp = 19, RULE_expressionAnd = 20, RULE_expressionAndTemp = 21, 
		RULE_expressionEq = 22, RULE_expressionEqTemp = 23, RULE_expressionCmp = 24, 
		RULE_expressionCmpTemp = 25, RULE_expressionAdd = 26, RULE_expressionAddTemp = 27, 
		RULE_expressionMult = 28, RULE_expressionMultTemp = 29, RULE_expressionUnary = 30, 
		RULE_expressionMem = 31, RULE_expressionMemTemp = 32, RULE_expressionMethods = 33, 
		RULE_expressionMethodsTemp = 34, RULE_expressionOther = 35, RULE_type = 36;
	public static final String[] ruleNames = {
		"program", "mainClass", "classDeclaration", "varDeclaration", "methodDeclaration", 
		"mainStatements", "mainStatement", "mainStatementAssignment", "methodCall", 
		"statements", "statement", "statementBlock", "statementCondition", "statementLoop", 
		"statementWrite", "statementAssignment", "expression", "expressionAssignment", 
		"expressionOr", "expressionOrTemp", "expressionAnd", "expressionAndTemp", 
		"expressionEq", "expressionEqTemp", "expressionCmp", "expressionCmpTemp", 
		"expressionAdd", "expressionAddTemp", "expressionMult", "expressionMultTemp", 
		"expressionUnary", "expressionMem", "expressionMemTemp", "expressionMethods", 
		"expressionMethodsTemp", "expressionOther", "type"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'class'", "'{'", "'def'", "'('", "')'", "':'", "'int'", "'return'", 
		"';'", "'}'", "'extends'", "'var'", "','", "'new'", "'if'", "'then'", 
		"'else'", "'while'", "'writeln('", "'='", "'||'", "'&&'", "'=='", "'<>'", 
		"'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'!'", "'['", "']'", "'.'", 
		"'length'", "'new '", "'this'", "'true'", "'false'", "'boolean'", "'string'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "CONST_NUM", "CONST_STR", "NL", "ID", 
		"COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Smoola.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	   void print(Object obj){
	        System.out.println(obj);
	   }

	public SmoolaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program p;
		public MainClassContext y;
		public ClassDeclarationContext x;
		public TerminalNode EOF() { return getToken(SmoolaParser.EOF, 0); }
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ProgramContext)_localctx).p =  new Program(); 
			setState(75);
			((ProgramContext)_localctx).y = mainClass();
			 _localctx.p.setMainClass(((ProgramContext)_localctx).y.c); 
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(77);
				((ProgramContext)_localctx).x = classDeclaration();
				 _localctx.p.addClass(((ProgramContext)_localctx).x.c); 
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public ClassDeclaration c;
		public Token class_name;
		public Token method_name;
		public MainStatementsContext st;
		public ExpressionContext rv;
		public List<TerminalNode> ID() { return getTokens(SmoolaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SmoolaParser.ID, i);
		}
		public MainStatementsContext mainStatements() {
			return getRuleContext(MainStatementsContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterMainClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitMainClass(this);
		}
	}

	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__0);
			setState(88);
			((MainClassContext)_localctx).class_name = match(ID);
			setState(89);
			match(T__1);
			setState(90);
			match(T__2);
			setState(91);
			((MainClassContext)_localctx).method_name = match(ID);
			setState(92);
			match(T__3);
			setState(93);
			match(T__4);
			setState(94);
			match(T__5);
			setState(95);
			match(T__6);
			setState(96);
			match(T__1);
			setState(97);
			((MainClassContext)_localctx).st = mainStatements();
			setState(98);
			match(T__7);
			setState(99);
			((MainClassContext)_localctx).rv = expression();
			setState(100);
			match(T__8);
			setState(101);
			match(T__9);
			setState(102);
			match(T__9);

			            String classname = ((MainClassContext)_localctx).class_name.getText();
			            String parentname = null;

			            ((MainClassContext)_localctx).c =  new ClassDeclaration(new Identifier(classname, ((MainClassContext)_localctx).class_name.getLine()),
			                new Identifier("Object", 0)
			                );
			            _localctx.c.setLlineNum(((MainClassContext)_localctx).class_name.getLine());

			            MethodDeclaration mainMethod = new MethodDeclaration(
			                new Identifier(((MainClassContext)_localctx).method_name.getText(),
			                    ((MainClassContext)_localctx).method_name.getLine())
			            );
			            mainMethod.setMainMethod();
			            mainMethod.setReturnValue(((MainClassContext)_localctx).rv.exp);
			            mainMethod.setReturnType(new IntType());
			            mainMethod.setBody(((MainClassContext)_localctx).st.stmts);
			            mainMethod.setLineNum(((MainClassContext)_localctx).method_name.getLine());
			            _localctx.c.addMethodDeclaration(mainMethod);
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public ClassDeclaration c;
		public Token name;
		public Token pname;
		public VarDeclarationContext var;
		public MethodDeclarationContext method;
		public List<TerminalNode> ID() { return getTokens(SmoolaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SmoolaParser.ID, i);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitClassDeclaration(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			            boolean has_parent = false;
			            ArrayList<VarDeclaration> vars;
			        
			setState(106);
			match(T__0);
			setState(107);
			((ClassDeclarationContext)_localctx).name = match(ID);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(108);
				match(T__10);
				setState(109);
				((ClassDeclarationContext)_localctx).pname = match(ID);
				 has_parent = true; 
				}
			}


			            String classname = ((ClassDeclarationContext)_localctx).name.getText();
			            String parentname = (has_parent) ? ((ClassDeclarationContext)_localctx).pname.getText() : null;
			            ((ClassDeclarationContext)_localctx).c =  new ClassDeclaration(
			                new Identifier(classname, ((ClassDeclarationContext)_localctx).name.getLine()),
			                (has_parent)? new Identifier(parentname, ((ClassDeclarationContext)_localctx).pname.getLine()) : new Identifier("Object", 0)
			            );
			        
			setState(114);
			match(T__1);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(115);
				((ClassDeclarationContext)_localctx).var = varDeclaration();
				 _localctx.c.addVarDeclaration(((ClassDeclarationContext)_localctx).var.var); 
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(123);
				((ClassDeclarationContext)_localctx).method = methodDeclaration();
				 _localctx.c.addMethodDeclaration(((ClassDeclarationContext)_localctx).method.m); 
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public VarDeclaration var;
		public Token id;
		public TypeContext t;
		public TerminalNode ID() { return getToken(SmoolaParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(T__11);
			{
			setState(134);
			((VarDeclarationContext)_localctx).id = match(ID);
			}
			setState(135);
			match(T__5);
			{
			setState(136);
			((VarDeclarationContext)_localctx).t = type();
			}
			setState(137);
			match(T__8);

			            Identifier var_id = new Identifier(((VarDeclarationContext)_localctx).id.getText(), ((VarDeclarationContext)_localctx).id.getLine());
			            ((VarDeclarationContext)_localctx).var =  new VarDeclaration(var_id, ((VarDeclarationContext)_localctx).t.t);
			            _localctx.var.setLineNum(((VarDeclarationContext)_localctx).id.getLine());
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public MethodDeclaration m;
		public Token name;
		public Token id;
		public TypeContext t;
		public TypeContext ret_type;
		public VarDeclarationContext var;
		public StatementsContext stmts;
		public ExpressionContext rv;
		public List<TerminalNode> ID() { return getTokens(SmoolaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SmoolaParser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).enterMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SmoolaListener ) ((SmoolaListener)listener).exitMethodDeclaration(this);
		}
	}

	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__2);
			setState(141);
			((MethodDeclarationContext)_localctx).name = match(ID);
